# intraday

./: .gitignore  .uvrc.example  README.md  app.py  backtest.py  core.py  coroutines.py  custom.py  data_providers.py  generate_test_data.py  logging.conf  positions.py  pyproject.toml  session.py  signals.py  test_e2e.py  utils.py
data/: FAS.csv  FAZ.csv  IVV.csv
settings/: appconfig.py  logging.conf
tests/: __init__.py  test_coroutines.py  test_custom.py  test_positions.py
