[project]
name = "intraday"
version = "0.1.0"
description = "Intraday algorithmic trading backtesting and execution framework"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "six>=1.16.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
